--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 dist: xenial
 language: python
 python:
-  - "3.4"
-  - "3.5"
   - "3.6"
   - "3.7"
 
@@ -10,4 +8,6 @@ install:
   pip install -r mentions/requirements.txt
 
 script:
+  python manage.py makemigrations
+  python manage.py migrate
   python runtests.py
