--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ install:
   pip install -r mentions/requirements.txt
 
 script:
+  cd mentions/
   python manage.py makemigrations
   python manage.py migrate
+  cd ..
   python runtests.py
