setup.py -> setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,13 +11,13 @@ url = https://beatonma.org/webmentions_tester/
 project_urls =
     Source = https://github.com/beatonma/django-wm
 classifiers =
-    "Framework :: Django"
-    "Intended Audience :: Developers"
-    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
-    "Programming Language :: Python :: 3.7"
-    "Programming Language :: Python :: 3.8"
-    "Programming Language :: Python :: 3.9"
-    "Programming Language :: Python :: 3.10"
+    Framework :: Django
+    Intended Audience :: Developers
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
 
 [options]
 include_package_data = true
