--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -13,10 +13,20 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
+    # Run tests with all dependencies.
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run tests
+      run: |
+        python runtests.py
+
+    # Uninstall celery and run tests again.
+    - name: Uninstall celery
+      run: |
+        pip uninstall celery -y
+    - name: Run tests without celery
       run: |
         python runtests.py
