`celery` is now optional (but still recommended).

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,10 +25,12 @@ packages = find:
 python_requires = >=3.7
 install_requires =
     beautifulsoup4 ~= 4.6.3
-    celery >= 5.2.2
     Django >= 2.2
     mf2py ~= 1.1.2
     requests ~= 2.20.0
 tests_require =
     django-nose
     pinocchio
+
+[options.extras_require]
+celery = celery >= 5.2.2
