--- a/sample-project/docker/no-celery/.env
+++ b/sample-project/docker/no-celery/.env
@@ -3,4 +3,6 @@ DB_HOST=no-celery-db
 POSTGRES_DB=no-celery-db
 POSTGRES_USER=user
 POSTGRES_PASSWORD=badpassword2!
-DEFAULT_MENTION_TARGET=http://with-celery-web.org/article/1/
+DEFAULT_MENTION_TARGET_DOMAIN=with-celery-web.org
+DEFAULT_MENTION_TARGET=/unreliable/
+AUTOMENTION_URLS=/unreliable/,/unreliable/,/unreliable/,/article/1/,/article/1/,/timeout/
