Updated sample project configuration.
`runtests.py` is now executed during docker build, halting build if
tests fail.

Removed obsolete `allow_incoming_webmentions` on Article model.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       dockerfile: ./sample-project/docker/with-celery/Dockerfile
       context: .
     depends_on:
-      - with-celery_db
+      - with-celery-db
       - with-celery-rabbitmq
     env_file:
       - ./sample-project/docker/.env
