--- a/setup.cfg
+++ b/setup.cfg
@@ -22,15 +22,15 @@ classifiers =
 [options]
 include_package_data = true
 packages = find:
-python_requires = >=3.7
+python_requires = >= 3.7
 install_requires =
     beautifulsoup4 ~= 4.6
     Django >= 2.2
     mf2py ~= 1.1
     requests ~= 2.20
-tests_require =
-    django-nose
-    pinocchio
 
 [options.extras_require]
 celery = celery >= 5.2.2
+test =
+    pytest
+    pytest-django
