--- a/setup.cfg
+++ b/setup.cfg
@@ -20,14 +20,19 @@ classifiers =
     Programming Language :: Python :: 3.10
 
 [options]
-include_package_data = true
 packages = find:
 python_requires = >= 3.7
 install_requires =
-    beautifulsoup4 ~= 4.6
+    beautifulsoup4 >= 4.6
     Django >= 2.2
-    mf2py ~= 1.1
-    requests ~= 2.20
+    mf2py >= 1.1
+    requests >= 2.20
+
+[options.package_data]
+mentions = templates/*.html
+
+[options.packages.find]
+exclude = tests*
 
 [options.extras_require]
 celery = celery >= 5.2.2
