--- a/sample-project/docker/with-celery/.env
+++ b/sample-project/docker/with-celery/.env
@@ -6,6 +6,5 @@ POSTGRES_PASSWORD=badpassword1!
 RABBITMQ_DEFAULT_USER=sample_project
 RABBITMQ_DEFAULT_PASS=badpassword
 CELERY_BROKER_URL=amqp://sample_project:badpassword@with-celery-rabbitmq:5672
-DEFAULT_MENTION_TARGET=/unreliable/
-DEFAULT_MENTION_TARGET_DOMAIN=no-celery-web.org
-AUTOMENTION_URLS=/unreliable/,/unreliable/,/unreliable/,/article/1/,/article/1/,/timeout/
+DEFAULT_MENTION_TARGET_DOMAIN=with-wagtail-web.org
+AUTOMENTION_URLS=/unreliable/,/initial-blogpost/,/vanilla/article/1/,/timeout/,/non-mentionable/
