Update template directory path.

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ install_requires =
     requests >= 2.20
 
 [options.package_data]
-mentions = templates/*.html
+mentions = templates/mentions/*.html
 
 [options.packages.find]
 exclude = tests*
