Updated urls for sample-project automentions.

--- a/sample-project/docker/with-celery/.env
+++ b/sample-project/docker/with-celery/.env
@@ -7,4 +7,4 @@ RABBITMQ_DEFAULT_USER=sample_project
 RABBITMQ_DEFAULT_PASS=badpassword
 CELERY_BROKER_URL=amqp://sample_project:badpassword@with-celery-rabbitmq:5672
 DEFAULT_MENTION_TARGET_DOMAIN=with-wagtail-web.org
-AUTOMENTION_URLS=/unreliable/,/initial-blogpost/,/vanilla/article/1/,/timeout/,/non-mentionable/
+AUTOMENTION_URLS=/vanilla/unreliable/,/initial-blogpost/,/vanilla/article/1/,/vanilla/timeout/,/non-mentionable/
