Refactored docker configuration.
- Single Dockerfile.
- Simpler .env files.
- docker-compose.yml now uses anchors for shared configuration.
- `celery` and `cron` now run in their own containers.
- Container dependencies now use healthcheck instead of wait-for-it script.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,14 @@
-env/
-htmlcov/
-docs/
-dist/
-build/
+*.egg-info/
+*.sqlite3
+*.gitbundle
+.idea/
 .git/
-*.egg-info
 .github/
 .pytest_cache/
+__pycache__/
+env/
+env-minimum/
+env-no-wagtail/
+dist/
+build/
+wiki/
