--- a/sample-project/docker/.env
+++ b/sample-project/docker/.env
@@ -1,3 +1,8 @@
-DJANGO_SUPERUSER_PASSWORD=badpass!
+PASSWORD=badpass!
+
+DJANGO_SUPERUSER_PASSWORD=$PASSWORD
 DJANGO_SUPERUSER_USERNAME=super
 DJANGO_SUPERUSER_EMAIL=fake@beatonma.org
+PGUSER=user
+POSTGRES_USER=$PGUSER
+POSTGRES_PASSWORD=$PASSWORD
